@@ -18,6 +18,8 @@
  */
 package com.guardtime.ksi.service.client;
 
+import com.guardtime.ksi.hashing.HashAlgorithm;
+
 import java.io.UnsupportedEncodingException;
 
 /**
@@ -34,6 +36,8 @@ public class KSIServiceCredentials implements ServiceCredentials {
      */
     private byte[] loginKey;
 
+    private HashAlgorithm hmacAlgorithm = HashAlgorithm.SHA2_256;
+
     /**
      * Create service credentials.
      *
@@ -46,7 +50,20 @@ public class KSIServiceCredentials implements ServiceCredentials {
      *            login Key
      */
     public KSIServiceCredentials(String loginId, String loginKey) {
-        this(loginId, toBytes(loginKey));
+        this(loginId, toBytes(loginKey), null);
+    }
+
+    /**
+    *
+    * Create service credentials.
+    *
+    * @param loginId
+    *            login ID
+    * @param loginKey
+    *            login Key
+    */
+    public KSIServiceCredentials(String loginId, byte[] loginKey) {
+        this(loginId, loginKey, null);
     }
 
     /**
@@ -57,14 +74,18 @@ public class KSIServiceCredentials implements ServiceCredentials {
      *            login ID
      * @param loginKey
      *            login Key
+     * @param hmacAlgorithm
+     *            HMAC algorithm of incoming messages
      */
-    public KSIServiceCredentials(String loginId, byte[] loginKey) {
+    public KSIServiceCredentials(String loginId, byte[] loginKey, HashAlgorithm hmacAlgorithm) {
         if (loginId == null) {
             throw new IllegalArgumentException("loginId is null");
         }
-
         if (loginKey == null) {
             throw new IllegalArgumentException("loginKey is null");
+        }
+        if (hmacAlgorithm != null) {
+            this.hmacAlgorithm = hmacAlgorithm;
         }
         this.loginId = loginId;
         this.loginKey = loginKey;
@@ -82,6 +103,13 @@ public class KSIServiceCredentials implements ServiceCredentials {
      */
     public byte[] getLoginKey() {
         return loginKey;
+    }
+
+    /**
+     * @return returns the algorithm for verifying the HMAC of incoming messages
+     */
+    public HashAlgorithm getHmacAlgorithm() {
+        return hmacAlgorithm;
     }
 
     private static byte[] toBytes(String loginKey) {
