@@ -18,6 +18,7 @@
  */
 package com.guardtime.ksi.pdu.v1;
 
+import com.guardtime.ksi.exceptions.KSIException;
 import com.guardtime.ksi.hashing.DataHash;
 import com.guardtime.ksi.hashing.HashAlgorithm;
 import com.guardtime.ksi.pdu.AggregationRequest;
@@ -26,7 +27,7 @@ import com.guardtime.ksi.pdu.exceptions.InvalidMessageAuthenticationCodeExceptio
 import com.guardtime.ksi.service.KSIProtocolException;
 import com.guardtime.ksi.service.client.KSIServiceCredentials;
 import org.testng.Assert;
-import org.testng.annotations.BeforeMethod;
+import org.testng.annotations.BeforeClass;
 import org.testng.annotations.Test;
 
 import static com.guardtime.ksi.CommonTestUtil.loadTlv;
@@ -40,7 +41,7 @@ public class PduV1FactoryTest {
     private DataHash dataHash;
     private KSIRequestContext requestContext;
 
-    @BeforeMethod
+    @BeforeClass
     public void setUp() throws Exception {
         this.dataHash = new DataHash(HashAlgorithm.SHA2_256, new byte[32]);
         this.requestContext = new KSIRequestContext(CREDENTIALS, 42275443333883166L, 42L, 42L);
@@ -93,6 +94,12 @@ public class PduV1FactoryTest {
         pduFactory.readAggregationResponse(requestContext, loadTlv("pdu/aggregation/aggregation-response-v1-202-error.tlv"));
     }
 
+    @Test(expectedExceptions = KSIException.class, expectedExceptionsMessageRegExp = "HMAC algorithm mismatch. Expected SHA-512, received SHA-256")
+    public void testAggregationResponseContainsAnotherMacAlgorithm_ThrowsKSIException() throws Exception {
+        KSIRequestContext requestContext = new KSIRequestContext(new KSIServiceCredentials("anon", "anon".getBytes("UTF-8"), HashAlgorithm.SHA2_512), 42275443333883166L, 42L, 42L);
+        pduFactory.readAggregationResponse(requestContext, loadTlv("pdu/aggregation/aggregation-response-v1.tlv"));
+    }
+
     @Test(expectedExceptions = KSIProtocolException.class, expectedExceptionsMessageRegExp = "Received PDU v2 response to PDU v1 request. Configure the SDK to use PDU v2 format for the given Aggregator")
     public void testReadV2AggregationResponse() throws Exception {
         pduFactory.readAggregationResponse(extensionContext, loadTlv("pdu/aggregation/aggregation-response-v2-with-error.tlv"));
@@ -101,6 +108,12 @@ public class PduV1FactoryTest {
     @Test(expectedExceptions = InvalidMessageAuthenticationCodeException.class, expectedExceptionsMessageRegExp = "Invalid MAC code. Expected.*")
     public void testExtensionResponseInvalidHMAC_ThrowsInvalidMessageAuthenticationCodeException() throws Exception {
         pduFactory.readExtensionResponse(extensionContext, loadTlv("pdu/extension/extension-response-v1-invalid-hmac.tlv"));
+    }
+
+    @Test(expectedExceptions = KSIException.class, expectedExceptionsMessageRegExp = "HMAC algorithm mismatch. Expected SHA-512, received SHA-256")
+    public void testExtensionResponseContainsAnotherMacAlgorithm_ThrowsKSIException() throws Exception {
+        KSIRequestContext requestContext = new KSIRequestContext(new KSIServiceCredentials("anon", "anon".getBytes("UTF-8"), HashAlgorithm.SHA2_512), 5546551786909961666L, 42L, 42L);
+        pduFactory.readExtensionResponse(requestContext, loadTlv("pdu/extension/extension-response-v1-ok-request-id-4321.tlv"));
     }
 
     @Test(expectedExceptions = KSIProtocolException.class, expectedExceptionsMessageRegExp = ".*request IDs do not match, sent \\'[0-9]+\\' received \\'4321\\'")
